fix spacing issues

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -1,24 +1,29 @@
 #annotated {
-  font-size: 24px;
+  font-size: x-large;
   padding: 50px;
-  /*white-space: pre-wrap;*/
+  line-height: 1.5em;
 }
 
 #annotated ruby {
-  margin-top: 30px;
-  margin-bottom: 10px;
+  display: inline-block;
+  width: 1.2em;
+  text-align: center;
   font-family: "Kaiti SC", TH-Khaai-TP0, TH-Khaai-TP2, TH-Feon-A, 楷体, KaiTi, 楷体_GB2312, KaiTi_GB2312, FandolKai, 华文楷体, STKaiti, TH-Khaai-PP0, TH-Khaai-PP2, Kai, "Kaiti TC", BiauKai, "AR PL UKai CN", 標楷體, DFKai-SB, "AR PL UKai HK", "AR PL UKai TW", 全字庫正楷體, TW-Kai, EUDCKAI, cursive;
 }
 
 #annotated rt {
-  padding-left: 0.2em;
-  padding-right: 0.2em;
+  display: block;
+  width: 100%;
+  /*overflow: hidden;*/
+  /*text-overflow: clip;*/
+  font-size: small;
+  text-align: center;
   opacity: 0;
   font-family: sans-serif;
 }
 
 #annotated rt.visible {
-  font-size: 10pt;
+  font-size: small;
   opacity: 100%;
 }
 
